[package]
name = "atproto-rs"
version = "0.1.1"
edition = "2021"

[lib]
name = "atproto_rs"
path = "src/lib.rs"

[[bin]]
name = "atproto-rs-test"
path = "src/bin.rs"

[dependencies]
chrono = "0.4.31"
derive-getters = "0.3.0"
eframe = "0.23.0"
egui = "0.23.0"
reqwest = { version = "0.11", features = ["blocking","json"]}
serde = { version = "1.0.190", features = ["derive"] }
